--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,14 +11,18 @@
   "author": "Raul Moya",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.1",
+    "googleapis": "^84.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "sweetalert": "^2.1.2"
   }
 }
