preparing buidling to heroku

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:7000"
+  "proxy": "https://healty-habits.herokuapp.com/"
 }
