--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
     "react-loader-spinner": "^4.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
